--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -272,7 +272,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.huanchengfly.tieba.post.share.FileProvider"
+            android:authorities="${applicationId}.share.FileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
@@ -282,7 +282,7 @@
 
         <provider
             android:name="androidx.startup.InitializationProvider"
-            android:authorities="com.huanchengfly.tieba.post.androidx-startup"
+            android:authorities="${applicationId}.androidx-startup"
             android:exported="false"
             tools:node="merge">
             <meta-data
