- Upgrade Gradle 8.11 → 8.13 - Upgrade Android Gradle Plugin 8.2.2 → 8.13.0 - Upgrade Kotlin 1.9.22 → 2.2.20 (K2 compiler) - Upgrade KSP 1.9.22-1.0.17 → 2.2.20-2.0.2 - Upgrade Hilt 2.46.1 → 2.57.2

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+kotlin-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 wire = { id = "com.squareup.wire", version.ref = "wire" }
 dependency-analysis = { id = "com.autonomousapps.dependency-analysis", version = "1.29.0" }
@@ -71,26 +72,8 @@ accompanist = "0.34.0"
 appcenter = "5.0.4"
 ##     ⬆ = "5.0.5"
 ##     ⬆ = "5.0.6"
-hilt = "2.46.1"
-##⬆ = "2.47"
-##⬆ = "2.48"
-##⬆ = "2.48.1"
-##⬆ = "2.49"
-##⬆ = "2.50"
-##⬆ = "2.51"
-##⬆ = "2.51.1"
-##⬆ = "2.52"
-##⬆ = "2.53"
-##⬆ = "2.53.1"
-##⬆ = "2.54"
-##⬆ = "2.55"
-##⬆ = "2.56"
-##⬆ = "2.56.1"
-##⬆ = "2.56.2"
-##⬆ = "2.57"
-##⬆ = "2.57.1"
-##⬆ = "2.57.2"
-kotlin = "1.9.22"
+hilt = "2.57.2"
+kotlin = "2.2.20"
 ##  ⬆ = "1.9.23"
 ##  ⬆ = "1.9.24"
 ##  ⬆ = "1.9.25"
@@ -179,7 +162,7 @@ wire = "4.9.3"
 ##⬆ = "5.3.11"
 ##⬆ = "5.4.0"
 
-agp = "8.2.2"
+agp = "8.13.0"
 ##⬆= "8.3.0-alpha01"
 ##⬆= "8.3.0-alpha02"
 ##⬆= "8.3.0-alpha03"
@@ -361,7 +344,7 @@ agp = "8.2.2"
 ##⬆= "9.0.0-alpha08"
 ##⬆= "9.0.0-alpha09"
 ##⬆= "9.0.0-alpha10"
-ksp = "1.9.22-1.0.17"
+ksp = "2.2.20-2.0.2"
 ##⬆= "1.9.22-1.0.18"
 ##⬆= "1.9.23-1.0.19"
 ##⬆= "1.9.23-1.0.20"
