- Upgrade Compose BOM 2024.01.00 → 2025.10.00 - Upgrade Compose Destinations 1.10.0 → 1.11.9 - Upgrade Navigation Compose 2.7.6 → 2.9.5 - Upgrade Kotlinx Coroutines 1.7.3 → 1.10.2 - Upgrade Kotlinx Serialization JSON 1.6.2 → 1.9.0 - Upgrade Kotlinx Collections Immutable 0.3.7 → 0.4.0

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -557,7 +557,7 @@ androidx-core = "1.12.0"
 ##         ⬆ = "1.17.0-rc01"
 ##         ⬆ = "1.17.0"
 
-compose-bom = "2024.01.00"
+compose-bom = "2025.10.00"
 ##       ⬆ = "2024.02.00"
 ##       ⬆ = "2024.02.01"
 ##       ⬆ = "2024.02.02"
@@ -594,7 +594,7 @@ compose-bom = "2024.01.00"
 ##       ⬆ = "2025.09.00"
 ##       ⬆ = "2025.09.01"
 ##       ⬆ = "2025.10.00"
-compose-destinations = "1.10.0"
+compose-destinations = "1.11.9"
 ##                ⬆ = "1.10.1"
 ##                ⬆ = "1.10.2"
 ##                ⬆ = "1.11.0-alpha"
@@ -607,7 +607,7 @@ compose-destinations = "1.10.0"
 ##                ⬆ = "1.11.7"
 ##                ⬆ = "1.11.8"
 ##                ⬆ = "1.11.9"
-androidx-navigation-compose = "2.7.6"
+androidx-navigation-compose = "2.9.5"
 ##                       ⬆ = "2.7.7"
 ##                       ⬆ = "2.8.0-alpha01"
 ##                       ⬆ = "2.8.0-alpha02"
@@ -668,7 +668,7 @@ airbnb-lottie = "6.3.0"
 ##         ⬆ = "6.6.7"
 ##         ⬆ = "6.6.9"
 ##         ⬆ = "6.6.10"
-kotlinx-coroutines = "1.7.3"
+kotlinx-coroutines = "1.10.2"
 ##              ⬆ = "1.8.0-RC"
 ##              ⬆ = "1.8.0-RC2"
 ##              ⬆ = "1.8.0"
@@ -680,7 +680,7 @@ kotlinx-coroutines = "1.7.3"
 ##              ⬆ = "1.10.0"
 ##              ⬆ = "1.10.1"
 ##              ⬆ = "1.10.2"
-kotlinx-serialization-json = "1.6.2"
+kotlinx-serialization-json = "1.9.0"
 ##                      ⬆ = "1.6.3"
 ##                      ⬆ = "1.7.0-RC"
 ##                      ⬆ = "1.7.0"
@@ -691,7 +691,7 @@ kotlinx-serialization-json = "1.6.2"
 ##                      ⬆ = "1.8.0"
 ##                      ⬆ = "1.8.1"
 ##                      ⬆ = "1.9.0"
-kotlinx-collections-immutable = "0.3.7"
+kotlinx-collections-immutable = "0.4.0"
 ##                         ⬆ = "0.3.8"
 ##                         ⬆ = "0.4.0"
 
@@ -847,6 +847,7 @@ accompanist-drawablepainter = { group = "com.google.accompanist", name = "accomp
 accompanist-insets-ui = { group = "com.google.accompanist", name = "accompanist-insets-ui", version.ref = "accompanist" }
 accompanist-systemuicontroller = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.ref = "accompanist" }
 accompanist-placeholder-material = { group = "com.google.accompanist", name = "accompanist-placeholder-material", version.ref = "accompanist" }
+accompanist-navigation-material = { group = "com.google.accompanist", name = "accompanist-navigation-material", version.ref = "accompanist" }
 
 # Sketch
 sketch-core = { group = "io.github.panpf.sketch3", name = "sketch", version.ref = "sketch" }
