--- a/gradle.properties
+++ b/gradle.properties
@@ -7,14 +7,15 @@ kotlin.parallel.tasks.in.project=true
 kotlin.incremental.useClasspathSnapshot=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
-org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 \
+org.gradle.jvmargs=-Xmx6144m -Xms2048m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC \
 --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
 --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
 --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 org.gradle.parallel=true
 # 启用 Gradle Daemon（后台进程会加快后续构建速度）
 org.gradle.daemon=true
-# org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache-problems=warn
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
