--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ output.json
 .gradle/
 **/build/
 
+# Kotlin compiler cache
+.kotlin/
+
 # Local configuration file (sdk path, etc)
 local.properties
 
