--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,51 +12,6 @@ kotlin-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 wire = { id = "com.squareup.wire", version.ref = "wire" }
 dependency-analysis = { id = "com.autonomousapps.dependency-analysis", version = "1.29.0" }
-##                                                                          ⬆ = "1.30.0" }
-##                                                                          ⬆ = "1.31.0" }
-##                                                                          ⬆ = "1.32.0" }
-##                                                                          ⬆ = "1.33.0" }
-##                                                                          ⬆ = "2.0.0" }
-##                                                                          ⬆ = "2.0.1" }
-##                                                                          ⬆ = "2.0.2" }
-##                                                                          ⬆ = "2.1.0" }
-##                                                                          ⬆ = "2.1.1" }
-##                                                                          ⬆ = "2.1.2" }
-##                                                                          ⬆ = "2.1.3" }
-##                                                                          ⬆ = "2.1.4" }
-##                                                                          ⬆ = "2.2.0" }
-##                                                                          ⬆ = "2.3.0" }
-##                                                                          ⬆ = "2.4.0" }
-##                                                                          ⬆ = "2.4.1" }
-##                                                                          ⬆ = "2.4.2" }
-##                                                                          ⬆ = "2.5.0" }
-##                                                                          ⬆ = "2.6.0" }
-##                                                                          ⬆ = "2.6.1" }
-##                                                                          ⬆ = "2.7.0" }
-##                                                                          ⬆ = "2.8.0" }
-##                                                                          ⬆ = "2.8.1" }
-##                                                                          ⬆ = "2.8.2" }
-##                                                                          ⬆ = "2.9.0" }
-##                                                                          ⬆ = "2.10.0" }
-##                                                                          ⬆ = "2.10.1" }
-##                                                                          ⬆ = "2.11.0" }
-##                                                                          ⬆ = "2.12.0" }
-##                                                                          ⬆ = "2.13.0" }
-##                                                                          ⬆ = "2.13.1" }
-##                                                                          ⬆ = "2.13.2" }
-##                                                                          ⬆ = "2.13.3" }
-##                                                                          ⬆ = "2.14.0" }
-##                                                                          ⬆ = "2.15.0" }
-##                                                                          ⬆ = "2.16.0" }
-##                                                                          ⬆ = "2.17.0" }
-##                                                                          ⬆ = "2.18.0" }
-##                                                                          ⬆ = "2.19.0" }
-##                                                                          ⬆ = "3.0.0" }
-##                                                                          ⬆ = "3.0.1" }
-##                                                                          ⬆ = "3.0.2" }
-##                                                                          ⬆ = "3.0.3" }
-##                                                                          ⬆ = "3.0.4" }
-##                                                                          ⬆ = "3.1.0" }
 
 [versions]
 
@@ -74,266 +29,14 @@ appcenter = "5.0.4"
 ##     ⬆ = "5.0.6"
 hilt = "2.57.2"
 kotlin = "2.2.20"
-##  ⬆ = "1.9.23"
-##  ⬆ = "1.9.24"
-##  ⬆ = "1.9.25"
-##  ⬆ = "2.0.0-Beta1"
-##  ⬆ = "2.0.0-Beta2"
-##  ⬆ = "2.0.0-Beta3"
-##  ⬆ = "2.0.0-Beta4"
-##  ⬆ = "2.0.0-Beta5"
-##  ⬆ = "2.0.0-RC1"
-##  ⬆ = "2.0.0-RC2"
-##  ⬆ = "2.0.0-RC3"
-##  ⬆ = "2.0.0"
-##  ⬆ = "2.0.10-RC"
-##  ⬆ = "2.0.10-RC2"
-##  ⬆ = "2.0.10"
-##  ⬆ = "2.0.20-Beta1"
-##  ⬆ = "2.0.20-Beta2"
-##  ⬆ = "2.0.20-RC"
-##  ⬆ = "2.0.20-RC2"
-##  ⬆ = "2.0.20"
-##  ⬆ = "2.0.21-RC"
-##  ⬆ = "2.0.21"
-##  ⬆ = "2.1.0-Beta1"
-##  ⬆ = "2.1.0-Beta2"
-##  ⬆ = "2.1.0-RC"
-##  ⬆ = "2.1.0-RC2"
-##  ⬆ = "2.1.0"
-##  ⬆ = "2.1.10-RC"
-##  ⬆ = "2.1.10-RC2"
-##  ⬆ = "2.1.10"
-##  ⬆ = "2.1.20-Beta1"
-##  ⬆ = "2.1.20-Beta2"
-##  ⬆ = "2.1.20-RC"
-##  ⬆ = "2.1.20-RC2"
-##  ⬆ = "2.1.20-RC3"
-##  ⬆ = "2.1.20"
-##  ⬆ = "2.1.21-RC"
-##  ⬆ = "2.1.21-RC2"
-##  ⬆ = "2.1.21"
-##  ⬆ = "2.2.0-Beta1"
-##  ⬆ = "2.2.0-Beta2"
-##  ⬆ = "2.2.0-RC"
-##  ⬆ = "2.2.0-RC2"
-##  ⬆ = "2.2.0-RC3"
-##  ⬆ = "2.2.0"
-##  ⬆ = "2.2.10-RC"
-##  ⬆ = "2.2.10-RC2"
-##  ⬆ = "2.2.10"
-##  ⬆ = "2.2.20-Beta1"
-##  ⬆ = "2.2.20-Beta2"
-##  ⬆ = "2.2.20-RC"
-##  ⬆ = "2.2.20-RC2"
-##  ⬆ = "2.2.20"
 ##  ⬆ = "2.2.21-RC"
 ##  ⬆ = "2.3.0-Beta1"
 sketch = "3.3.0"
 ##  ⬆ = "3.3.1"
 ##  ⬆ = "3.3.2"
 wire = "5.4.0"
-##⬆ = "4.9.4"
-##⬆ = "4.9.5"
-##⬆ = "4.9.6"
-##⬆ = "4.9.7"
-##⬆ = "4.9.8"
-##⬆ = "4.9.9"
-##⬆ = "4.9.11"
-##⬆ = "5.0.0-alpha01"
-##⬆ = "5.0.0-alpha02"
-##⬆ = "5.0.0-alpha03"
-##⬆ = "5.0.0-alpha04"
-##⬆ = "5.0.0"
-##⬆ = "5.1.0"
-##⬆ = "5.2.0"
-##⬆ = "5.2.1"
-##⬆ = "5.3.0"
-##⬆ = "5.3.1"
-##⬆ = "5.3.2"
-##⬆ = "5.3.3"
-##⬆ = "5.3.4"
-##⬆ = "5.3.5"
-##⬆ = "5.3.6"
-##⬆ = "5.3.7"
-##⬆ = "5.3.8"
-##⬆ = "5.3.9"
-##⬆ = "5.3.10"
-##⬆ = "5.3.11"
-##⬆ = "5.4.0"
 
 agp = "8.13.0"
-##⬆= "8.3.0-alpha01"
-##⬆= "8.3.0-alpha02"
-##⬆= "8.3.0-alpha03"
-##⬆= "8.3.0-alpha04"
-##⬆= "8.3.0-alpha05"
-##⬆= "8.3.0-alpha06"
-##⬆= "8.3.0-alpha07"
-##⬆= "8.3.0-alpha08"
-##⬆= "8.3.0-alpha09"
-##⬆= "8.3.0-alpha10"
-##⬆= "8.3.0-alpha11"
-##⬆= "8.3.0-alpha12"
-##⬆= "8.3.0-alpha13"
-##⬆= "8.3.0-alpha14"
-##⬆= "8.3.0-alpha15"
-##⬆= "8.3.0-alpha16"
-##⬆= "8.3.0-alpha17"
-##⬆= "8.3.0-alpha18"
-##⬆= "8.3.0-beta01"
-##⬆= "8.3.0-beta02"
-##⬆= "8.3.0-rc01"
-##⬆= "8.3.0-rc02"
-##⬆= "8.3.0"
-##⬆= "8.3.1"
-##⬆= "8.3.2"
-##⬆= "8.4.0-alpha01"
-##⬆= "8.4.0-alpha02"
-##⬆= "8.4.0-alpha03"
-##⬆= "8.4.0-alpha04"
-##⬆= "8.4.0-alpha05"
-##⬆= "8.4.0-alpha06"
-##⬆= "8.4.0-alpha07"
-##⬆= "8.4.0-alpha08"
-##⬆= "8.4.0-alpha09"
-##⬆= "8.4.0-alpha10"
-##⬆= "8.4.0-alpha11"
-##⬆= "8.4.0-alpha12"
-##⬆= "8.4.0-alpha13"
-##⬆= "8.4.0-beta01"
-##⬆= "8.4.0-beta02"
-##⬆= "8.4.0-rc01"
-##⬆= "8.4.0-rc02"
-##⬆= "8.4.0"
-##⬆= "8.4.1"
-##⬆= "8.4.2"
-##⬆= "8.5.0-alpha01"
-##⬆= "8.5.0-alpha02"
-##⬆= "8.5.0-alpha03"
-##⬆= "8.5.0-alpha04"
-##⬆= "8.5.0-alpha05"
-##⬆= "8.5.0-alpha06"
-##⬆= "8.5.0-alpha07"
-##⬆= "8.5.0-alpha08"
-##⬆= "8.5.0-beta01"
-##⬆= "8.5.0-beta02"
-##⬆= "8.5.0-rc01"
-##⬆= "8.5.0-rc02"
-##⬆= "8.5.0"
-##⬆= "8.5.1"
-##⬆= "8.5.2"
-##⬆= "8.6.0-alpha01"
-##⬆= "8.6.0-alpha02"
-##⬆= "8.6.0-alpha03"
-##⬆= "8.6.0-alpha04"
-##⬆= "8.6.0-alpha05"
-##⬆= "8.6.0-alpha06"
-##⬆= "8.6.0-alpha07"
-##⬆= "8.6.0-alpha08"
-##⬆= "8.6.0-beta01"
-##⬆= "8.6.0-beta02"
-##⬆= "8.6.0-rc01"
-##⬆= "8.6.0"
-##⬆= "8.6.1"
-##⬆= "8.7.0-alpha01"
-##⬆= "8.7.0-alpha02"
-##⬆= "8.7.0-alpha03"
-##⬆= "8.7.0-alpha04"
-##⬆= "8.7.0-alpha05"
-##⬆= "8.7.0-alpha06"
-##⬆= "8.7.0-alpha07"
-##⬆= "8.7.0-alpha08"
-##⬆= "8.7.0-alpha09"
-##⬆= "8.7.0-beta01"
-##⬆= "8.7.0-beta02"
-##⬆= "8.7.0-rc01"
-##⬆= "8.7.0"
-##⬆= "8.7.1"
-##⬆= "8.7.2"
-##⬆= "8.7.3"
-##⬆= "8.8.0-alpha01"
-##⬆= "8.8.0-alpha02"
-##⬆= "8.8.0-alpha03"
-##⬆= "8.8.0-alpha04"
-##⬆= "8.8.0-alpha05"
-##⬆= "8.8.0-alpha06"
-##⬆= "8.8.0-alpha07"
-##⬆= "8.8.0-alpha08"
-##⬆= "8.8.0-alpha09"
-##⬆= "8.8.0-beta01"
-##⬆= "8.8.0-rc01"
-##⬆= "8.8.0-rc02"
-##⬆= "8.8.0"
-##⬆= "8.8.1"
-##⬆= "8.8.2"
-##⬆= "8.9.0-alpha01"
-##⬆= "8.9.0-alpha02"
-##⬆= "8.9.0-alpha03"
-##⬆= "8.9.0-alpha04"
-##⬆= "8.9.0-alpha05"
-##⬆= "8.9.0-alpha06"
-##⬆= "8.9.0-alpha07"
-##⬆= "8.9.0-alpha08"
-##⬆= "8.9.0-alpha09"
-##⬆= "8.9.0-beta01"
-##⬆= "8.9.0-rc01"
-##⬆= "8.9.0-rc02"
-##⬆= "8.9.0"
-##⬆= "8.9.1"
-##⬆= "8.9.2"
-##⬆= "8.9.3"
-##⬆= "8.10.0-alpha01"
-##⬆= "8.10.0-alpha02"
-##⬆= "8.10.0-alpha03"
-##⬆= "8.10.0-alpha04"
-##⬆= "8.10.0-alpha05"
-##⬆= "8.10.0-alpha06"
-##⬆= "8.10.0-alpha07"
-##⬆= "8.10.0-alpha08"
-##⬆= "8.10.0-beta01"
-##⬆= "8.10.0-rc01"
-##⬆= "8.10.0-rc02"
-##⬆= "8.10.0-rc03"
-##⬆= "8.10.0-rc04"
-##⬆= "8.10.0"
-##⬆= "8.10.1"
-##⬆= "8.11.0-alpha01"
-##⬆= "8.11.0-alpha02"
-##⬆= "8.11.0-alpha03"
-##⬆= "8.11.0-alpha04"
-##⬆= "8.11.0-alpha05"
-##⬆= "8.11.0-alpha06"
-##⬆= "8.11.0-alpha07"
-##⬆= "8.11.0-alpha08"
-##⬆= "8.11.0-alpha09"
-##⬆= "8.11.0-alpha10"
-##⬆= "8.11.0-rc01"
-##⬆= "8.11.0-rc02"
-##⬆= "8.11.0"
-##⬆= "8.11.1"
-##⬆= "8.11.2"
-##⬆= "8.12.0-alpha01"
-##⬆= "8.12.0-alpha02"
-##⬆= "8.12.0-alpha03"
-##⬆= "8.12.0-alpha04"
-##⬆= "8.12.0-alpha05"
-##⬆= "8.12.0-alpha06"
-##⬆= "8.12.0-alpha07"
-##⬆= "8.12.0-alpha08"
-##⬆= "8.12.0-alpha09"
-##⬆= "8.12.0-rc01"
-##⬆= "8.12.0"
-##⬆= "8.12.1"
-##⬆= "8.12.2"
-##⬆= "8.12.3"
-##⬆= "8.13.0-alpha01"
-##⬆= "8.13.0-alpha02"
-##⬆= "8.13.0-alpha03"
-##⬆= "8.13.0-alpha04"
-##⬆= "8.13.0-rc01"
-##⬆= "8.13.0-rc02"
-##⬆= "8.13.0"
 ##⬆= "9.0.0-alpha01"
 ##⬆= "9.0.0-alpha02"
 ##⬆= "9.0.0-alpha03"
@@ -345,84 +48,6 @@ agp = "8.13.0"
 ##⬆= "9.0.0-alpha09"
 ##⬆= "9.0.0-alpha10"
 ksp = "2.2.20-2.0.2"
-##⬆= "1.9.22-1.0.18"
-##⬆= "1.9.23-1.0.19"
-##⬆= "1.9.23-1.0.20"
-##⬆= "1.9.24-1.0.20"
-##⬆= "1.9.25-1.0.20"
-##⬆= "2.0.0-Beta1-1.0.14"
-##⬆= "2.0.0-Beta1-1.0.15"
-##⬆= "2.0.0-Beta2-1.0.16"
-##⬆= "2.0.0-Beta3-1.0.17"
-##⬆= "2.0.0-Beta4-1.0.17"
-##⬆= "2.0.0-Beta4-1.0.18"
-##⬆= "2.0.0-Beta4-1.0.19"
-##⬆= "2.0.0-Beta5-1.0.19"
-##⬆= "2.0.0-Beta5-1.0.20"
-##⬆= "2.0.0-RC1-1.0.20"
-##⬆= "2.0.0-RC2-1.0.20"
-##⬆= "2.0.0-RC3-1.0.20"
-##⬆= "2.0.0-1.0.21"
-##⬆= "2.0.0-1.0.22"
-##⬆= "2.0.0-1.0.23"
-##⬆= "2.0.0-1.0.24"
-##⬆= "2.0.10-RC-1.0.23"
-##⬆= "2.0.10-RC2-1.0.24"
-##⬆= "2.0.10-1.0.24"
-##⬆= "2.0.20-Beta1-1.0.22"
-##⬆= "2.0.20-Beta2-1.0.23"
-##⬆= "2.0.20-RC-1.0.24"
-##⬆= "2.0.20-RC2-1.0.24"
-##⬆= "2.0.20-1.0.24"
-##⬆= "2.0.20-1.0.25"
-##⬆= "2.0.21-RC-1.0.25"
-##⬆= "2.0.21-1.0.25"
-##⬆= "2.0.21-1.0.26"
-##⬆= "2.0.21-1.0.27"
-##⬆= "2.0.21-1.0.28"
-##⬆= "2.1.0-Beta1-1.0.25"
-##⬆= "2.1.0-Beta2-1.0.25"
-##⬆= "2.1.0-Beta2-1.0.26"
-##⬆= "2.1.0-RC-1.0.26"
-##⬆= "2.1.0-RC-1.0.27"
-##⬆= "2.1.0-RC2-1.0.28"
-##⬆= "2.1.0-1.0.28"
-##⬆= "2.1.0-1.0.29"
-##⬆= "2.1.10-RC-1.0.29"
-##⬆= "2.1.10-RC2-1.0.29"
-##⬆= "2.1.10-1.0.29"
-##⬆= "2.1.10-1.0.30"
-##⬆= "2.1.10-1.0.31"
-##⬆= "2.1.20-Beta1-1.0.29"
-##⬆= "2.1.20-Beta2-1.0.29"
-##⬆= "2.1.20-Beta2-1.0.30"
-##⬆= "2.1.20-RC-1.0.30"
-##⬆= "2.1.20-RC-1.0.31"
-##⬆= "2.1.20-RC2-1.0.31"
-##⬆= "2.1.20-RC3-1.0.31"
-##⬆= "2.1.20-1.0.31"
-##⬆= "2.1.20-1.0.32"
-##⬆= "2.1.20-2.0.0"
-##⬆= "2.1.20-2.0.1"
-##⬆= "2.1.21-RC-2.0.0"
-##⬆= "2.1.21-RC2-2.0.1"
-##⬆= "2.1.21-2.0.1"
-##⬆= "2.1.21-2.0.2"
-##⬆= "2.2.0-Beta1-2.0.0"
-##⬆= "2.2.0-Beta2-2.0.1"
-##⬆= "2.2.0-RC-2.0.1"
-##⬆= "2.2.0-RC2-2.0.1"
-##⬆= "2.2.0-RC2-2.0.2"
-##⬆= "2.2.0-RC3-2.0.2"
-##⬆= "2.2.0-2.0.2"
-##⬆= "2.2.10-RC-2.0.2"
-##⬆= "2.2.10-RC2-2.0.2"
-##⬆= "2.2.10-2.0.2"
-##⬆= "2.2.20-Beta1-2.0.2"
-##⬆= "2.2.20-Beta2-2.0.2"
-##⬆= "2.2.20-RC-2.0.2"
-##⬆= "2.2.20-RC2-2.0.2"
-##⬆= "2.2.20-2.0.2"
 ##⬆= "2.2.20-2.0.3"
 ##⬆= "2.2.20-2.0.4"
 ##⬆= "2.2.21-RC-2.0.4"
@@ -558,100 +183,8 @@ androidx-core = "1.12.0"
 ##         ⬆ = "1.17.0"
 
 compose-bom = "2025.10.00"
-##       ⬆ = "2024.02.00"
-##       ⬆ = "2024.02.01"
-##       ⬆ = "2024.02.02"
-##       ⬆ = "2024.03.00"
-##       ⬆ = "2024.04.00"
-##       ⬆ = "2024.04.01"
-##       ⬆ = "2024.05.00"
-##       ⬆ = "2024.06.00"
-##       ⬆ = "2024.08.00"
-##       ⬆ = "2024.09.00-alpha"
-##       ⬆ = "2024.09.00-beta"
-##       ⬆ = "2024.09.00"
-##       ⬆ = "2024.09.01"
-##       ⬆ = "2024.09.02"
-##       ⬆ = "2024.09.03"
-##       ⬆ = "2024.10.00"
-##       ⬆ = "2024.10.01"
-##       ⬆ = "2024.11.00"
-##       ⬆ = "2024.12.01"
-##       ⬆ = "2025.01.00"
-##       ⬆ = "2025.01.01"
-##       ⬆ = "2025.02.00"
-##       ⬆ = "2025.03.00"
-##       ⬆ = "2025.03.01"
-##       ⬆ = "2025.04.00"
-##       ⬆ = "2025.04.01"
-##       ⬆ = "2025.05.00"
-##       ⬆ = "2025.05.01"
-##       ⬆ = "2025.06.00"
-##       ⬆ = "2025.06.01"
-##       ⬆ = "2025.07.00"
-##       ⬆ = "2025.08.00"
-##       ⬆ = "2025.08.01"
-##       ⬆ = "2025.09.00"
-##       ⬆ = "2025.09.01"
-##       ⬆ = "2025.10.00"
 compose-destinations = "1.11.9"
-##                ⬆ = "1.10.1"
-##                ⬆ = "1.10.2"
-##                ⬆ = "1.11.0-alpha"
-##                ⬆ = "1.11.1-alpha"
-##                ⬆ = "1.11.2-alpha"
-##                ⬆ = "1.11.3-alpha"
-##                ⬆ = "1.11.4-alpha"
-##                ⬆ = "1.11.5-beta"
-##                ⬆ = "1.11.6"
-##                ⬆ = "1.11.7"
-##                ⬆ = "1.11.8"
-##                ⬆ = "1.11.9"
 androidx-navigation-compose = "2.9.5"
-##                       ⬆ = "2.7.7"
-##                       ⬆ = "2.8.0-alpha01"
-##                       ⬆ = "2.8.0-alpha02"
-##                       ⬆ = "2.8.0-alpha03"
-##                       ⬆ = "2.8.0-alpha04"
-##                       ⬆ = "2.8.0-alpha05"
-##                       ⬆ = "2.8.0-alpha06"
-##                       ⬆ = "2.8.0-alpha07"
-##                       ⬆ = "2.8.0-alpha08"
-##                       ⬆ = "2.8.0-beta01"
-##                       ⬆ = "2.8.0-beta02"
-##                       ⬆ = "2.8.0-beta03"
-##                       ⬆ = "2.8.0-beta04"
-##                       ⬆ = "2.8.0-beta05"
-##                       ⬆ = "2.8.0-beta06"
-##                       ⬆ = "2.8.0-beta07"
-##                       ⬆ = "2.8.0-rc01"
-##                       ⬆ = "2.8.0"
-##                       ⬆ = "2.8.1"
-##                       ⬆ = "2.8.2"
-##                       ⬆ = "2.8.3"
-##                       ⬆ = "2.8.4"
-##                       ⬆ = "2.8.5"
-##                       ⬆ = "2.8.6"
-##                       ⬆ = "2.8.7"
-##                       ⬆ = "2.8.8"
-##                       ⬆ = "2.8.9"
-##                       ⬆ = "2.9.0-alpha01"
-##                       ⬆ = "2.9.0-alpha02"
-##                       ⬆ = "2.9.0-alpha03"
-##                       ⬆ = "2.9.0-alpha04"
-##                       ⬆ = "2.9.0-alpha05"
-##                       ⬆ = "2.9.0-alpha06"
-##                       ⬆ = "2.9.0-alpha07"
-##                       ⬆ = "2.9.0-alpha08"
-##                       ⬆ = "2.9.0-alpha09"
-##                       ⬆ = "2.9.0-beta01"
-##                       ⬆ = "2.9.0-rc01"
-##                       ⬆ = "2.9.0"
-##                       ⬆ = "2.9.1"
-##                       ⬆ = "2.9.2"
-##                       ⬆ = "2.9.3"
-##                       ⬆ = "2.9.4"
-##                       ⬆ = "2.9.5"
 
 airbnb-lottie = "6.3.0"
 ##         ⬆ = "6.4.0"
@@ -669,66 +202,12 @@ airbnb-lottie = "6.3.0"
 ##         ⬆ = "6.6.9"
 ##         ⬆ = "6.6.10"
 kotlinx-coroutines = "1.10.2"
-##              ⬆ = "1.8.0-RC"
-##              ⬆ = "1.8.0-RC2"
-##              ⬆ = "1.8.0"
-##              ⬆ = "1.8.1-Beta"
-##              ⬆ = "1.8.1"
-##              ⬆ = "1.9.0-RC"
-##              ⬆ = "1.9.0-RC.2"
-##              ⬆ = "1.9.0"
-##              ⬆ = "1.10.0"
-##              ⬆ = "1.10.1"
-##              ⬆ = "1.10.2"
 kotlinx-serialization-json = "1.9.0"
-##                      ⬆ = "1.6.3"
-##                      ⬆ = "1.7.0-RC"
-##                      ⬆ = "1.7.0"
-##                      ⬆ = "1.7.1"
-##                      ⬆ = "1.7.2"
-##                      ⬆ = "1.7.3"
-##                      ⬆ = "1.8.0-RC"
-##                      ⬆ = "1.8.0"
-##                      ⬆ = "1.8.1"
-##                      ⬆ = "1.9.0"
 kotlinx-collections-immutable = "0.4.0"
-##                         ⬆ = "0.3.8"
-##                         ⬆ = "0.4.0"
 
 glide = "5.0.5"
-## ⬆ = "5.0.0-rc01"
-## ⬆ = "5.0.0-rc05"
-## ⬆ = "5.0.0"
-## ⬆ = "5.0.3"
-## ⬆ = "5.0.4"
-## ⬆ = "5.0.5"
 okhttp3 = "5.2.1"
-##   ⬆ = "5.0.0-alpha.1"
-##   ⬆ = "5.0.0-alpha.2"
-##   ⬆ = "5.0.0-alpha.3"
-##   ⬆ = "5.0.0-alpha.4"
-##   ⬆ = "5.0.0-alpha.5"
-##   ⬆ = "5.0.0-alpha.6"
-##   ⬆ = "5.0.0-alpha.7"
-##   ⬆ = "5.0.0-alpha.8"
-##   ⬆ = "5.0.0-alpha.9"
-##   ⬆ = "5.0.0-alpha.10"
-##   ⬆ = "5.0.0-alpha.11"
-##   ⬆ = "5.0.0-alpha.12"
-##   ⬆ = "5.0.0-alpha.13"
-##   ⬆ = "5.0.0-alpha.14"
-##   ⬆ = "5.0.0-alpha.15"
-##   ⬆ = "5.0.0-alpha.16"
-##   ⬆ = "5.0.0-alpha.17"
-##   ⬆ = "5.0.0"
-##   ⬆ = "5.1.0"
-##   ⬆ = "5.2.0"
-##   ⬆ = "5.2.1"
 retrofit2 = "3.0.0"
-##     ⬆ = "2.10.0"
-##     ⬆ = "2.11.0"
-##     ⬆ = "2.12.0"
-##     ⬆ = "3.0.0"
 
 [libraries]
 
@@ -743,6 +222,7 @@ compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-mani
 compose-animation = { group = "androidx.compose.animation", name = "animation" }
 compose-animation-graphics = { group = "androidx.compose.animation", name = "animation-graphics" }
 compose-material = { group = "androidx.compose.material", name = "material" }
+compose-material-navigation = { group = "androidx.compose.material", name = "material-navigation" }
 compose-material-icons-core = { group = "androidx.compose.material", name = "material-icons-core" }
 compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 compose-runtime-tracing = { group = "androidx.compose.runtime", name = "runtime-tracing", version = "1.0.0-beta01" }
@@ -844,10 +324,14 @@ androidx-hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", vers
 
 # Accompanist
 accompanist-drawablepainter = { group = "com.google.accompanist", name = "accompanist-drawablepainter", version.ref = "accompanist" }
-accompanist-insets-ui = { group = "com.google.accompanist", name = "accompanist-insets-ui", version.ref = "accompanist" }
-accompanist-systemuicontroller = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.ref = "accompanist" }
-accompanist-placeholder-material = { group = "com.google.accompanist", name = "accompanist-placeholder-material", version.ref = "accompanist" }
-accompanist-navigation-material = { group = "com.google.accompanist", name = "accompanist-navigation-material", version.ref = "accompanist" }
+
+# Accompanist Replacements
+eygraber-placeholder-material = { group = "com.eygraber", name = "compose-placeholder-material", version = "1.0.8" }
+##                                                                                                    ⬆ = "1.0.9" }
+##                                                                                                    ⬆ = "1.0.10" }
+##                                                                                                    ⬆ = "1.0.11" }
+##                                                                                                    ⬆ = "1.0.12" }
+systemuibars-tweaker = { group = "com.github.stoyan-vuchev", name = "system-ui-bars-tweaker", version = "1.2.4" }
 
 # Sketch
 sketch-core = { group = "io.github.panpf.sketch3", name = "sketch", version.ref = "sketch" }
