--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -122,8 +122,7 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 github-oaid = { group = "com.github.gzu-liyujiang", name = "Android_CN_OAID", version = "4.2.12" }
 
 # JetBrains
-org-jetbrains-annotations = { group = "org.jetbrains", name = "annotations", version = "26.0.2" }
-##                                                                                ⬆ = "26.0.2-1" }
+org-jetbrains-annotations = { group = "org.jetbrains", name = "annotations", version = "26.0.2-1" }
 
 # Kotlin
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
@@ -156,10 +155,7 @@ junit-junit = { group = "junit", name = "junit", version = "4.13.2" }
 androidx-test-core = { group = "androidx.test", name = "core", version = "1.7.0" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version = "1.3.0" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version = "1.7.0" }
-androidx-test-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version = "3.5.1" }
-##                                                                                             ⬆ = "3.6.0" }
-##                                                                                             ⬆ = "3.6.1" }
-##                                                                                             ⬆ = "3.7.0" }
+androidx-test-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version = "3.7.0" }
 androidx-test-runner = { group = "androidx.test", name = "runner", version = "1.7.0" }
 
 # Glide
