--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -152,6 +152,9 @@ androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "s
 
 # Test
 junit-junit = { group = "junit", name = "junit", version = "4.13.2" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
+mockk = { group = "io.mockk", name = "mockk", version = "1.13.13" }
+turbine = { group = "app.cash.turbine", name = "turbine", version = "1.2.0" }
 androidx-test-core = { group = "androidx.test", name = "core", version = "1.7.0" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version = "1.3.0" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version = "1.7.0" }
