refactor: eliminate all static API calls and complete DI migration
Finalize dependency injection refactoring by removing all remaining
TiebaApi.getInstance() calls throughout the codebase:

- Repository layer: Add ContentModerationRepository interface with
implementation; inject ITiebaApi into AccountRepositoryImpl
- Service layer: Inject API through EntryPoint in NotifyJobService,
OKSignService (non-Hilt-managed components)
- Utility layer: Replace static API calls with EntryPoint injection in
ClientUtils, OKSigner; remove TiebaUtil.reportPost() (-25 lines)
- UI layer: Migrate report functionality from static utils to ViewModels
(ThreadViewModel, SubPostsViewModel) for proper lifecycle management
- DI configuration: Add AppEntryPoint for non-Hilt components; bind
ContentModerationRepository; remove duplicate AccountRepository provider
- Tests: Fix constructor signatures in AccountRepositoryImplTest,
ThreadViewModelTest; add ContentModerationRepositoryImplTest (6 tests)

This completes the static singleton elimination initiative, achieving 100%
dependency injection coverage across all API usage points.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,7 @@ jobs:
           has_custom_message: ${{ steps.check_release_message.outputs.has_custom_message }}
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ env.version_name }}-${{ env.version_code }}
+          tag_name: ${{ env.version_code }}-${{ env.version_name }}
           name: ${{ env.version_name }} (${{ env.version_code }})
           body: |
             ${{ env.has_custom_message == 'true' && env.custom_message || '' }}
