refactor: introduce ThreadStore for centralized data management
- Add ThreadStore with LRU/TTL memory management and optimistic updates
- Migrate ViewModels (Forum, Thread, Hot, Concern, Personalized) to use store
- Extract AgreeButton component with optimistic UI feedback
- Add test coverage for store and mappers

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ output.json
 # Kotlin compiler cache
 .kotlin/
 
+# KSP (Kotlin Symbol Processing) cache
+kls_database.db
+
 # Local configuration file (sdk path, etc)
 local.properties
 
